--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -54,7 +54,7 @@ html {
 
 @media only screen and (max-width: 850px) {
     body {
-        font-size: 4vw
+        font-size: 2em
     }
 }
 
